<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_new"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"/>
    
    <!--<item
        android:id="@+id/action_import"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_import"/>  -->
    
    <!--<item
        android:id="@+id/action_export"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_export"/>  -->
    
    <item android:id="@+id/action_changeLength"
          android:orderInCategory="10"
          android:icon="@drawable/ic_menu_changelength"
          android:title="@string/action_changeLength"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_changeSignature"
          android:orderInCategory="11"
          android:icon="@drawable/ic_menu_changesig"
          android:title="@string/action_changeSignature"
          android:showAsAction="never" />

    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/> -->
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_about"/>
</menu>
