<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >
        
        <mcapp.Display
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    
        <!--<Button
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/button_startRecording"
            android:onClick="onRecordButton" />  -->
    
        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:minWidth="80dip"
            android:onClick="onPlayButton"
            android:text="@string/button_play" />
        
        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/playButton"
            android:layout_alignBottom="@+id/playButton"
            android:layout_toRightOf="@+id/playButton"
            android:minWidth="80dip"
            android:onClick="onStopButton"
            android:text="@string/button_stop" />
        
        <TextView
            android:id="@+id/spacer1"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/stopButton"
            android:layout_toRightOf="@+id/stopButton"
            android:text="@string/label_blank"
            android:visibility="invisible" />
    
        <!--<CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/recordButton"
            android:layout_alignBottom="@+id/recordButton"
            android:layout_marginRight="11dp"
            android:layout_toLeftOf="@+id/recordButton"
            android:text="@string/checkBox_useRecording"
            android:onClick="onRecordCheckBox" />  -->
    
        <Button
            android:id="@+id/eraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/stopButton"
            android:layout_toRightOf="@+id/spacer1"
            android:minWidth="80dip"
            android:onClick="onEraserButton"
            android:text="@string/button_eraser" />
        
        <TextView
            android:id="@+id/spacer2"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/stopButton"
            android:layout_toRightOf="@+id/eraser"
            android:text="@string/label_blank"
            android:visibility="invisible" />
        
        <SeekBar
            android:id="@+id/bpmBar"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/stopButton"
            android:layout_toLeftOf="@+id/bpmLabel"
            android:layout_toRightOf="@+id/spacer2"
            android:layout_marginTop="7dp"
            android:layout_marginRight="1dp"
            android:max="90"
            android:progress="30" />
        
        <TextView
            android:id="@+id/bpmLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/stopButton"
            android:text="@string/label_bpm_default"
            android:layout_marginTop="10dp"
            android:layout_marginRight="-3dp"
            android:gravity="right"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
        
        <!-- <Button
            android:id="@+id/changeNoteLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop = "true"
            android:layout_alignParentLeft="true"
            android:text = "@string/button_changeNoteLength"
            android:onClick = "onChangeNoteLengthButton" /> -->
        
        <!-- <Button 
            android:id="@+id/pickSignature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/changeNoteLength"
            android:text="@string/button_changeSignature"
            android:onClick="onChangeSignature" /> -->      
            
        <!-- Pop-up Box Controls
        <Button android:id="@+id/show_popup_button" android:layout_gravity="bottom"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="25px" android:text="Show Popup" />
    
        <mcapp.TransparentPanel
            android:id="@+id/popup_window" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_gravity="bottom" android:gravity="left" android:padding="1px" >
    
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:gravity="right"
                android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:background="@drawable/button_bar_gradient">
    
                <Button android:id="@+id/hide_popup_button"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" android:layout_marginTop="5px"
                    android:layout_marginRight="10px" android:paddingLeft="5px"
                    android:paddingRight="5px" style="?android:attr/buttonStyleSmall"
                    android:textStyle="bold" android:textSize="12px" android:text="  Close  " android:background="@drawable/button_close"/>
    
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical" android:layout_width="fill_parent"
                    android:layout_height="1px" android:layout_marginTop="5px"
                    android:layout_below="@+id/hide_popup_button" />
            </RelativeLayout>
    
            <TextView android:id="@+id/location_name"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textStyle="bold" android:textSize="16px" 
                android:layout_marginTop="5px" android:layout_marginLeft="5px" />
    
            <TextView android:id="@+id/location_description"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_margin="5px" />
        </mcapp.TransparentPanel>-->

        <ImageView
            android:id="@+id/help_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/help_description"
            android:onClick="onHelpImageClick"
            android:src="@drawable/help_image"
            android:visibility="invisible" />

    </RelativeLayout>
    
    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <!-- <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" /> -->

    <!-- Style of the list inside the left drawer  -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>